[gd_scene load_steps=8 format=2]

[ext_resource path="res://PhysicalBodies/Gateways/PhysicsBodyMover.gd" type="Script" id=1]
[ext_resource path="res://PhysicalBodies/Gateways/GatewayGrabber.tscn" type="PackedScene" id=2]
[ext_resource path="res://PhysicalBodies/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://PhysicalBodies/Component_Flipper.gd" type="Script" id=4]
[ext_resource path="res://PhysicalBodies/Person.png" type="Texture" id=5]
[ext_resource path="res://Effects/Lights/SpotLight.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 35 )

[node name="Player" type="KinematicBody2D" groups=[
"players",
]]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="GatewayGrabber" parent="." instance=ExtResource( 2 )]

[node name="PhysicsBodyMover" type="Tween" parent="."]
script = ExtResource( 1 )

[node name="Component_Flipper" type="Node" parent="."]
script = ExtResource( 4 )
_sprite_path = NodePath("../Sprite")

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="SpotLight" parent="." instance=ExtResource( 6 )]
texture_scale = 0.58
energy = 0.9
range_item_cull_mask = 3
[connection signal="moved_through_vent" from="PhysicsBodyMover" to="." method="_on_PhysicsBodyMover_moved_through_vent"]
[connection signal="tween_all_completed" from="PhysicsBodyMover" to="PhysicsBodyMover" method="_on_PhysicsBodyMover_tween_all_completed"]
